--- a/src/public/sass/modules/_arrows.scss
+++ b/src/public/sass/modules/_arrows.scss
@@ -1,5 +1,5 @@
 .nav-arrow {
-    background: url(../images/nav-arrow.png);
+    background: url('../images/nav-arrow.png');
     display: inline-block;
     height: 5px;
     width: 18px;
