--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -40,7 +40,7 @@
 @import "modules/map";
 @import "modules/nav-header";
 @import "modules/nav-secondary";
-@import "modules/products";
+@import "modules/products-section";
 @import "modules/slick";
 @import "modules/statements";
 @import "modules/testimonials";
