--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -112,6 +112,7 @@
         text-align: left;
 
         .nav-footer__container {
+
             @include bp($foundation-small, $foundation-med) {
                 margin: 0 auto;
                 max-width: 260px;
@@ -120,19 +121,27 @@
         }
         .nav-major {
             float: left;
-            width: 50%;
+            width: 70%;
             text-transform: uppercase;
 
             a {
                 color: $color-text-light;
             }
+
+            @include bp($foundation-med, $foundation-large) {
+                width: 50% !important;
+            }
         }
         .nav-minor {
             float: left;
-            width: 50%;
+            width: 30%;
 
             a {
                 color: $color-grey;
+            }
+
+            @include bp($foundation-med, $foundation-large) {
+                width: 50% !important;
             }
         }
 
@@ -149,23 +158,8 @@
             border-bottom: 1px solid $color-grey-border;
             padding-bottom: 2.25em;
 
-            .nav-major {
-                width: 70% !important;
-            }
-            .nav-minor {
-                width: 30% !important;
-            }
-
             nav {
                 text-align: center;
-            }
-        }
-        @include bp($foundation-large, $my-large) {
-            .nav-major {
-                width: 70% !important;
-            }
-            .nav-minor {
-                width: 30% !important;
             }
         }
     }
