--- a/src/public/sass/modules/_statements.scss
+++ b/src/public/sass/modules/_statements.scss
@@ -31,15 +31,16 @@
 }
 
 .intro-statement--squeezed {
+
+    a:hover {
+        text-decoration: none;
+    }
+
     @include bp($my-large) {
         padding: {
             left: 30%;
             right: 30%;
         }
-    }
-
-    a:hover {
-        text-decoration: none;
     }
 }
 
@@ -50,29 +51,30 @@
         right: 15%;
     }
 
-    @include bp($foundation-small, $mobile-landscape) {
-        padding: {
-            left: 10%;
-            right: 10%;
-        }
-    }
-
     h3 {
         padding: {
             left: 10%;
             right: 10%;
         }
-
-        @include bp($foundation-small, $mobile-landscape) {
-            padding: 0;
-        }
     }
     p {
         color: $color-default-light;
     }
+
+    @include bp($foundation-small, $mobile-landscape) {
+        padding: {
+            left: 10%;
+            right: 10%;
+        }
+
+        h3 {
+            padding: 0;
+        }
+    }
 }
 
 .header-statement--squeezed {
+
     @include bp($tablet) {
         padding: {
             left: 25%;
@@ -82,6 +84,7 @@
 }
 
 .header-statement--more-squeezed {
+    
     @include bp($tablet) {
         padding: {
             left: 40%;
