--- a/src/public/sass/modules/_breadcrumbs.scss
+++ b/src/public/sass/modules/_breadcrumbs.scss
@@ -25,7 +25,7 @@
             border-bottom: 1px dotted;
         }
 
-        @include bp($foundation-small, $tablet) {
+        @include bp($foundation-small, $switch-nav-medium) {
             display: none;
         }
     }
