--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -19,6 +19,11 @@
             vertical-align: middle;
         }
     }
+    .nav-header--is-open & {
+        @include bp($foundation-small, $tablet) {
+            background: $color-grey-dark;
+        }
+    }
 }
 
 .masthead {
@@ -32,7 +37,7 @@
     text-align: center;
     width: 100%;
 
-    &.nav-header--is-open {
+    .nav-header--is-open & {
         @include bp($foundation-small, $tablet) {
             background: $color-grey-dark;
         }
