--- a/src/public/sass/modules/_contact-modal.scss
+++ b/src/public/sass/modules/_contact-modal.scss
@@ -5,7 +5,7 @@
     left: 0;
     opacity: 0;
     position: fixed;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease;
     width: 100%;
 
     &.modal--is-open {
