--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -16,10 +16,10 @@ body {
     background: #272b2c;
     color: $color-default;
     font-family: $font-family-default;
-    /*font-size: $font-size-default * .875; // set to 14px*/
+    font-size: $font-size-default * .875; // set to 14px on mobile
     line-height: $line-height-default;
 
-    @include bp($foundation-small) {
+    @include bp($mobile-landscape) {
         font-size: $font-size-default; // allow 16px
     }
 }
