--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -225,7 +225,7 @@ legend {
     border: none;
     color: #fff;
     display: inline-block;
-    font-weight: bold;
+    /*font-weight: bold;*/
     font-size: 0.875em;
     outline: none;
     padding: .85em 2em .85em;
