fixed svg/png fallback for social icons; edited mobile/tablet padding for testimonials; removed installer title/name from homepage; reduced button horizontal padding

--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -225,10 +225,10 @@ legend {
     border: none;
     color: #fff;
     display: inline-block;
-    /*font-weight: bold;*/
+    font-weight: bold;
     font-size: 0.875em;
     outline: none;
-    padding: .85em 2em .85em;
+    padding: .85em 1.5em .85em;
     text-transform: uppercase;
 }
 button {
