--- a/src/public/sass/modules/_icons.scss
+++ b/src/public/sass/modules/_icons.scss
@@ -177,6 +177,6 @@
 .icon-twitter--reversed,
 .icon-pinterest--reversed {
     .icon__svg {
-        fill: $color-grey-light;
+        fill: $color-text-light;
     }
 }
