--- a/src/public/sass/modules/_welcome.scss
+++ b/src/public/sass/modules/_welcome.scss
@@ -1,6 +1,6 @@
 .installer-welcome-wrapper {
     @include bp($foundation-small, $foundation-large) {
-        padding: 5% 0 0;
+        padding: 0;
     }
 
     .intro-statement {
