--- a/src/public/sass/pages/_contact.scss
+++ b/src/public/sass/pages/_contact.scss
@@ -16,9 +16,8 @@
         padding: .75em;
 
         &[type="submit"] {
-            border: none;
+            @extend %btn;
             margin-top: 25px;
-            padding: .875em 2em .85em;
         }
     }
     label {
