fixed prev/next button issue for gallery; used John's video styling/js from whyskylights to get video working correctly, sizing correctly, and with correct loading icon; fixed circle mixin

--- a/src/public/sass/helpers/_mixins.scss
+++ b/src/public/sass/helpers/_mixins.scss
@@ -13,7 +13,7 @@
 @mixin circle($width, $max-width: none, $bg: none) {
     background: $bg;
     border-radius: 50%;
-    height: auto;
+    height: $width;
     max-width: $max-width;
     width: $width;
 
