--- a/src/public/sass/modules/_icons.scss
+++ b/src/public/sass/modules/_icons.scss
@@ -180,3 +180,18 @@
         fill: $color-text-light;
     }
 }
+
+/*-----------------------
+  @ICON-LOADER
+------------------------*/
+
+// http://codepen.io/aurer/pen/jEGbA
+.icon-loader {
+
+}
+#icon-loader #runner {
+    fill: white;
+}
+#icon-loader #background {
+    fill: #666;
+}
