fixed case of 'schedule a consultation' text; allowed for 18px font-sizing on larger screens; edited header-statement padding

--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -20,7 +20,10 @@ body {
     line-height: $line-height-default;
 
     @include bp($mobile-landscape) {
-        font-size: $font-size-default; // allow 16px
+        font-size: $font-size-default; // default set to 16px
+    }
+    @include bp($my-very-large) {
+        font-size: $font-size-default * 1.125; // allow 18px on large screens
     }
 }
 
