--- a/src/public/sass/modules/_incentives.scss
+++ b/src/public/sass/modules/_incentives.scss
@@ -13,6 +13,10 @@
         font-size: 3em;
         font-weight: bold;
         line-height: 1.15em;
+
+        @include bp($my-very-large) {
+            font-size: 2.75em;
+        }
     }
 
     @include bp($foundation-small, $mobile-landscape) {
