--- a/src/public/sass/modules/_discover-more.scss
+++ b/src/public/sass/modules/_discover-more.scss
@@ -25,7 +25,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
-    padding: 15%;
+    padding: 13% 15%;
 
     @include bp($foundation-small, $foundation-med) {
         background-position: center;
