--- a/src/public/sass/pages/_products.scss
+++ b/src/public/sass/pages/_products.scss
@@ -1,5 +1,5 @@
 .products {
-    background-image: url('../images/products-bg.jpg');
+    background-image: url('../images/backgrounds/products-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
