--- a/src/public/sass/modules/_nav-secondary.scss
+++ b/src/public/sass/modules/_nav-secondary.scss
@@ -3,7 +3,7 @@
     background: $color-grey-dark;
     padding: 20px 0;
 
-    @include bp($tablet) {
+    @include bp($foundation-large) {
         padding: 0;
     }
 }
@@ -11,7 +11,7 @@
 .nav-secondary {
     display: none;
 
-    @include bp($tablet) {
+    @include bp($foundation-large) {
         display: block !important;
     }
 }
@@ -32,7 +32,7 @@
     margin: 0 auto;
     width: auto;
 
-    @include bp($tablet) {
+    @include bp($foundation-large) {
         display: none !important;
     }
 }
