style tweaks to brochures and installing pages

--- a/src/public/sass/modules/_statements.scss
+++ b/src/public/sass/modules/_statements.scss
@@ -5,6 +5,10 @@
         right: 10%;
     }
 
+    &--snug p {
+        margin-bottom: 0;
+    }
+
     h2 {
         padding: {
             left: 10%;
