--- a/src/public/sass/modules/_nav-header.scss
+++ b/src/public/sass/modules/_nav-header.scss
@@ -85,7 +85,7 @@
         }
 
         a {
-            font-weight: bold;
+            /*font-weight: bold;*/
             margin: 0 auto;
             text-transform: uppercase;
 
