--- a/src/public/sass/modules/_hero.scss
+++ b/src/public/sass/modules/_hero.scss
@@ -3,14 +3,20 @@
     background-size: cover;
 
     .card {
-        background-clip: padding-box;
-        border: 10px solid rgba(245,245,245,.6);
         width: 300px;
+
+        p {
+            margin-bottom: 0;
+        }
 
         @include bp($foundation-small, $foundation-med) {
             background: $color-grey-light-bg;
             padding: 10% 10% 8%;
             width: 100%;
+        }
+        @include bp($foundation-med) {
+            background-clip: padding-box;
+            border: 10px solid rgba(245,245,245,.6);
         }
         @include bp($my-very-large) {
             width: 350px;
