--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -86,6 +86,11 @@
     .logo {
         @extend %centered;
         position: static;
+
+        img {
+            max-height: 50%;
+            max-width: 60%;
+        }
     }
     .copyright {
         color: $color-grey-light;
@@ -94,7 +99,7 @@
         max-width: 60%;
 
         @include bp($foundation-small, $foundation-med) {
-            bottom: 30px;
+            bottom: 26px;
             left: 50%;
             position: absolute;
             transform: translateX(-50%);
