--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -3,7 +3,7 @@
     border-bottom: $masthead-border solid $color-secondary;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px 0;
+    padding: 12px 0 10px;
     text-align: center;
     width: 100%;
 
