--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -30,7 +30,7 @@
 }
 
 %font-display {
-    font-family: 'Montserrat';
+    font-family: $font-family-display;
 }
 .font-display {
     @extend %font-display;
@@ -236,80 +236,7 @@
 /*-----------------------
   @IMAGES
 ------------------------*/
-.polaroid {
-
-    &:after {
-        @include bp($tablet) {
-            content: '';
-            border-radius: 100%;
-            bottom: 2%;
-            box-shadow: 0 0 50px rgba(0, 0, 0, 1);
-            height: 30%;
-            left: 10%;
-            position: absolute;
-            right: 10%;
-            width: 80%;
-            z-index: 1;
-        }
-    }
-    img {
-        border: 6px solid #fff;
-        box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
-        position: relative;
-        width: 100%;
-        z-index: 2;
-    }
-}
-
-.polaroid--round {
-    img {
-        @include circle(100%, 292px);
-    }
-}
 
 .product-image {
     display: block;
-}
-
-/*-----------------------
-  @CARD
-------------------------*/
-.card {
-    background: $color-reverse-heading;
-    color: $color-default-light;
-    text-align: center;
-    padding: 2em;
-
-    h3 {
-        color: $color-default;
-        text-transform: none;
-        margin-bottom: 0;
-    }
-}
-
-/*-----------------------
-  @HOOKS
-
-  adds ability to check a breakpoint in JS
-  see ww.common.check_breakpoint() in scripts.js
-------------------------*/
-@include bp($foundation-med) {
-    body:after {
-        content: 'foundation-med';
-        display: none;
-    }
-}
-
-@include bp($tablet) {
-    body:after {
-        content: 'foundation-med tablet';
-        display: none;
-    }
-}
-
-@include bp($modal-is-enabled) {
-    body:after {
-        content: 'foundation-med tablet modal-is-enabled';
-        display: none;
-    }
 }
