--- a/src/public/sass/modules/_accessories.scss
+++ b/src/public/sass/modules/_accessories.scss
@@ -5,4 +5,10 @@
             margin-bottom: 40px;
         }
     }
+    h5 {
+        margin-bottom: .875em;
+    }
+    p {
+        font-size: .875em;
+    }
 }
