--- a/src/public/sass/pages/_about.scss
+++ b/src/public/sass/pages/_about.scss
@@ -1,6 +1,6 @@
 .about-velux {
     div {
-        padding: 5% 0;
+        padding: 1.5em 0 2.5em;
     }
 }
 .about-dealer {
@@ -50,7 +50,7 @@
 
 .our-principles {
 
-    h2 {
+    h3 {
         margin-bottom: 5%;
     }
 
