--- a/src/public/sass/pages/_installing.scss
+++ b/src/public/sass/pages/_installing.scss
@@ -17,8 +17,13 @@
         }
     }
 }
-
 .skylight-orientation {
+
+    p {
+        margin-bottom: 0;
+    }
+}
+.skylight-exposure {
 
     .columns {
         padding: 0;
