--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -19,11 +19,11 @@
             vertical-align: middle;
         }
     }
-    .nav-header--is-open & {
+    /*.nav-header--is-open & {
         @include bp($foundation-small, $tablet) {
             background: $color-grey-dark;
         }
-    }
+    }*/
 }
 
 .masthead {
@@ -37,11 +37,11 @@
     text-align: center;
     width: 100%;
 
-    .nav-header--is-open & {
+    /*.nav-header--is-open & {
         @include bp($foundation-small, $tablet) {
             background: $color-grey-dark;
         }
-    }
+    }*/
     &.is-fixed {
         box-shadow: 0 1px 7px 0 rgba(50,50,50,.25);
         left: auto;
