--- a/src/public/sass/layout/_nav-header.scss
+++ b/src/public/sass/layout/_nav-header.scss
@@ -71,6 +71,7 @@
                 box-shadow: 0 3px 6px 0 rgba(50,50,50,.25);
                 border-top: $masthead-border solid $color-secondary;
                 display: none;
+                font-size: .875em;
                 left: 0;
                 line-height: 70px;
                 position: absolute;
@@ -164,7 +165,7 @@
             padding-top: 20px;
         }
         @include bp($tablet, $switch-nav-large) {
-            background: #fff;
+            background: $color-grey-dark;
             box-shadow: 0 3px 6px 0 rgba(50,50,50,.25);
             left: 0;
             position: absolute;
