--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -16,7 +16,7 @@
 .icheckbox_flat {
     background: url('../images/flat.png');
     margin-right: 10px;
-    outline: 1px solid #333333;
+    outline: 1px solid $color-grey-light;
     positon: relative;
     top: -2px;
 }
@@ -26,14 +26,14 @@
 
     .selectric {
         background: transparent;
-        border: 1px solid $color-default-light;
+        border: 1px solid $color-grey-light;
         border-radius: 0;
 
         .button {
             top: 4px;
 
             &:after {
-                border-top-color: $color-default-light;
+                border-top-color: $color-grey-light;
             }
         }
 
