npm updates run; removed underline on hover for social icons in IE; removed favicon.ico, will add back and see if it works

--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -173,6 +173,9 @@
                 width: 24px;
             }
         }
+        .social__link:hover {
+            @extend %no-underline;
+        }
 
         @include bp($foundation-small, $foundation-med) {
             bottom: 50px;
